--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Raidplaner : Packedpixel Raidplaner" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <meta name="description" content="Packedpixel Raidplaner" />
+    
+    <link rel="icon" href="favicon.png" type="image/png"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Raidplaner</title>
   </head>
