--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Packedpixel Raidplaner" />
     
     <link rel="icon" href="favicon.png" type="image/png"/>
+    <link rel="publisher" href="https://plus.google.com/117920822853814771101"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Raidplaner</title>
@@ -19,7 +20,7 @@
         <div id="head">
             <div class="topmenu">
                 <a class="element" href="https://github.com/arnecls/raidplaner"><div class="badge github"></div></a>
-                <a class="element" href="https://plus.google.com/b/117920822853814771101/117920822853814771101"><div class="badge googleplus"></div></a>
+                <a class="element" href="https://plus.google.com/b/117920822853814771101/117920822853814771101" rel="publisher"><div class="badge googleplus"></div></a>
             </div>
             <a class="element" href="https://github.com/arnecls/raidplaner/releases"><div class="download">
                 <span class="hint">Download</span><br/>
