--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Packedpixel Raidplaner" />
     
     <link rel="icon" href="favicon.png" type="image/png"/>
-    <link rel="publisher" href="https://plus.google.com/117920822853814771101"/>
+    <link href="https://plus.google.com/117920822853814771101" rel="publisher">Google+</link>
 	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Raidplaner</title>
