--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="head">
             <div class="topmenu">
                 <a class="element" href="https://github.com/arnecls/raidplaner"><div class="badge github"></div></a>
-                <a class="element" href="https://plus.google.com/b/117920822853814771101/117920822853814771101" rel="publisher"><div class="badge googleplus"></div></a>
+                <a class="element" href="https://plus.google.com/b/117920822853814771101/117920822853814771101"><div class="badge googleplus"></div></a>
             </div>
             <a class="element" href="https://github.com/arnecls/raidplaner/releases"><div class="download">
                 <span class="hint">Download</span><br/>
@@ -138,6 +138,9 @@
             Packedpixel Raidplaner requires PHP 5.3 or better with PDO (MySQL) and mcrypt support as well as a MySQL 4.x or better database.<br/>
             Supported browsers are Firefox 4+, Google Chrome, Internet Explorer 9+, Opera 12+ and Safari 4+.
         </p>
+        <div style="display: none">
+        	<a href="https://plus.google.com/117920822853814771101" rel="publisher">Google+</a>
+        </div>
     </div>
         
     <script>
