--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Packedpixel Raidplaner" />
     
     <link rel="icon" href="favicon.png" type="image/png"/>
-    <a href="https://plus.google.com/117920822853814771101" rel="publisher">Google+</a>
 	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <a href="https://plus.google.com/117920822853814771101" rel="publisher" style="display:none">Google+</a>
 
     <title>Raidplaner</title>
   </head>
