--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         
         <div class="separator"></div>
         <p style="margin-bottom: 50px">
-            Packedpixel Raidplaner requires PHP 5.3 or better with PDO (MySQL) and mcrypt support as well as a MySQL 4.x or better database.<br/>
-            Supported browsers are Firefox 4+, Google Chrome, Internet Explorer 9+, Opera 12+ and Safari 4+.
+            Packedpixel Raidplaner requires PHP 5.3.4 or better with PDO (MySQL) support as well as a MySQL 4.x or better database.<br/>
+            Supported browsers are Firefox 4+, Google Chrome, Internet Explorer 10+, Opera 13+ and Safari 4+.
         </p>
     </div>
         
