--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Packedpixel Raidplaner" />
     
     <link rel="icon" href="favicon.png" type="image/png"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css?v=110">
     <a href="https://plus.google.com/117920822853814771101" rel="publisher" style="display:none">Google+</a>
 
     <script type="text/javascript" src="scripts/jquery-2.0.3.min.js"></script>
