--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div class="logo" style="background-image: url(images/logos/smf.png); width: 96px"></div>
             <div class="logo" style="background-image: url(images/logos/vanilla.png); width: 102px"></div>
             <div class="logo" style="background-image: url(images/logos/vbulletin.png); width: 135px"></div>
+            <div class="logo" style="background-image: url(images/logos/woltlab.png); width: 203px"></div>
             <div class="logo" style="background-image: url(images/logos/wordpress.png); width: 203px"></div>
         </div>
         
@@ -151,7 +152,7 @@
         <div class="separator"></div>
         <p style="margin-bottom: 50px">
             Packedpixel Raidplaner requires PHP 5.3.4 or better with PDO (MySQL) support as well as a MySQL 5.x or better database.<br/>
-            Supported browsers are Firefox 4+, Google Chrome, Internet Explorer 10+, Opera 13+ and Safari 4+.
+            Supported browsers are Firefox 4+, Google Chrome, Internet Explorer 10+, Opera 12+ and Safari 4+.
         </p>
     </div>
     
